<resources>
    <string name="app_name">PFE_0220</string>


    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>


    <string name="planning">Planning</string>
    <string name="students">Students</string>
    <string name="teachers">Teachers</string>
    <string name="Departements">Departements</string>
    <string name="Profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="add_planning">Add new Planning</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>